# NeuralCpp

./: CMakeLists.txt  README.md  neuralcppConfig.h.in
lib/tensor/: CMakeLists.txt  tensorConfig.h.in
lib/tensor/include/tensor/: tensor.h
lib/tensor/src/: tensor.cpp
test/: CMakeLists.txt  test_cmake.cpp  test_tensor_const0.cpp
